adiconado paginas teste

--- a/styleAlex.css
+++ b/styleAlex.css
@@ -1,3 +1,7 @@
+/*Aqui encontra o arquivo css da página de Alex */
+
+
+
 * {
     margin: 0;
     padding: 0;
@@ -163,5 +167,6 @@ form.example::after {
   clear: both;
   display: table;
 }
+
 
 
