--- a/testenav.css
+++ b/testenav.css
@@ -47,7 +47,7 @@ body, html {
 .nav-button {
   padding: 10px 16px;
   background: #fff;
-  border-radius: 8px;
+  border-radius: 8px 8px 0 0;
   text-decoration: none;
   color: #003366;
   font-weight: 500;
@@ -62,7 +62,7 @@ body, html {
 
 /* Hover visual nos botões */
 .nav-button:hover {
-  background: #eef3f8;
+  box-shadow: 0 4px 10px rgba(0, 0, 0, 0.09);
   transform: scale(1.03);
   color: #F6931D;
 }
@@ -196,12 +196,12 @@ body, html {
 }
 
 /* ===================== PALETA DE CORES ===================== */
-/* 
+/*
 Padrão de cores:
 LARANJÃO - #F6931D
 LARANJINHA - #FCC080
 AZUL ESCURO - #004A8C
 AZUL CLARO - #2884D6
-CINZA CLARO - #EBEBEB 
+CINZA CLARO - #EBEBEB
 */
 /* ===================== FIM DO CSS ===================== */
